# rgb_toy

./: Cargo.toml  README.md  build.cmd  connect.cmd
src/: main.rs  note.rs  player.rs  songs.rs
