[package]
name = "rgb_toy"
version = "1.0.0"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.7"
# nb = "1.0.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
cortex-m-semihosting = { version="0.3.7", optional=true }
# embedded-graphics = "0.7.1"
# ssd1306 = "0.7.0"
alloc-cortex-m = "0.4.2"
embedded-time = "0.12.1"

[features]
# default = ["semihosting"]
semihosting = ["cortex-m-semihosting"]

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "high"]

[profile.dev]
#debug = true
lto = true

[profile.release]
lto = true
strip = true
opt-level = 's'
panic = 'abort'
codegen-units = 1